2005-12-08 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Partition.h,
	  src/Partition.cc: added 'Glib::ustring mountpoint'
	* include/GParted_Core.h,
	  src/GParted_Core.cc: implemented set_mountpoints() to set mountpoint
	  in partitions.
	* include/Dialog_Partition_Info.h,
	  src/Dialog_Partition_Info.cc: use Partition::mountpoint instead of
	  finding it ourselves.

2005-12-07 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Partition.h,
	  src/Partition.cc: from now on each partition has a reference to it's
	  device.
	* src/Win_GParted.cc,
	  src/Dialog_Partition_New.cc: make use of new Set() from partition
	* include/GParted_Core.h,
	  src/GParted_Core.cc: since ped_file_system_clobber() ignored reiser4
	  i've implemented a custom 'filesystem signature remover'.
	  Also made use of the fact a partition now knows on which device it
	  lives.
	* src/Operation.cc: the get_string() didn't use
	  Get_Filesystem_String() and thus returned faulty strings. Also did
	  some cleanups.
	
2005-12-07 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: made warning a bit more informative
	
2005-12-07 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* rewrote quite some stuff to use an enum to indentify filesystems
	  instead of stringcomparisons.

2005-11-29 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* src/jfs.cc: fixed 'broken pipe' warning
	* src/fat16.cc,
	  src/fat32.cc: removed unnecessary 'echo 2 |' from freespace scan.

2005-11-29 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* include/GParted_Core.h,
	  src/GParted_Core.cc: implemented a 'wait_for_node()' function after
	  reading http://bugs.gentoo.org/show_bug.cgi?id=102343. I couldn't
	  reproduce the bug myself, but i hope this wil solve it.
	  Also made 'set_partition_type()' return a boolean for improved
	  errorchecking.

2005-11-28 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* decided to use the Supported enum a bit more efficient in checks
	  ( doh, big deal :P )
