@@ -1,3 +1,8 @@
+2005-12-11 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: use statvfs instead of this ugly df-wrapping.
+
 2005-12-08 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/Partition.h,
